force-app/libs/action-queue/objects/Execution_History__c/Execution_History__c.object-meta.xml
<CustomObject>
    <label>Execution History</label>
    <nameField>
        <displayFormat>EH-{000000}</displayFormat>
        <label>Execution Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Execution Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>