force-app/libs/action-queue/objects/Execution_History__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <referenceTo>Action__c</referenceTo>
    <relationshipLabel>Execution Histories</relationshipLabel>
    <relationshipName>Execution_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>