force-app/libs/action-queue/objects/Execution_History__c/fields/Integration_Log__c.field-meta.xml
<CustomField>
    <fullName>Integration_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Log</label>
    <referenceTo>IntegrationLog__c</referenceTo>
    <relationshipLabel>Execution Histories</relationshipLabel>
    <relationshipName>Execution_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>