force-app/libs/action-queue/objects/Execution_History__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>